results/classifier/118/x86/1541
x86: 0.970
ppc: 0.915
graphic: 0.817
hypervisor: 0.801
architecture: 0.789
i386: 0.781
files: 0.765
device: 0.752
permissions: 0.722
mistranslation: 0.626
semantic: 0.599
register: 0.556
network: 0.553
vnc: 0.539
debug: 0.529
PID: 0.485
assembly: 0.475
socket: 0.467
TCG: 0.461
risc-v: 0.451
VMM: 0.439
kernel: 0.433
peripherals: 0.419
arm: 0.384
user-level: 0.383
performance: 0.379
KVM: 0.312
virtual: 0.289
boot: 0.230

Invalid position of G_NORETURN in clang v15
Description of problem:
Order of `G_NORETURN` used in https://gitlab.com/qemu-project/qemu/-/blob/0f3de970febd2c9b29dccecb63ca928c6802a101/include/qemu/osdep.h#L240-242 is not valid in clang++ 15.0.7.

Switching `extern` with `G_NORETURN` seems to fix the issue.
Steps to reproduce:
1. Build qemu system for MIPSEL or use minimal reproducer:

`example.cpp`:
```
#include "/path/to/qemu/include/glib-compat.h"

extern G_NORETURN
void // QEMU_ERROR("code path is reachable")
    qemu_build_not_reached_always(void);
```

```
$ clang++ --version
clang version 15.0.7
Target: x86_64-pc-linux-gnu
Thread model: posix
InstalledDir: /usr/bin
$ clang++ -m64 -mcx16 -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -fcolor-diagnostics -Wall -Winvalid-pch -std=gnu++11 -O0 -g example.cpp
example.cpp:3:8: error: an attribute list cannot appear here
extern G_NORETURN
       ^~~~~~~~~~
/usr/include/glib-2.0/glib/gmacros.h:1075:21: note: expanded from macro 'G_NORETURN'
# define G_NORETURN [[noreturn]]
                    ^~~~~~~~~~~~
1 error generated.
```
